--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="image/joel.png" alt="Joël Jorge" class="profile-img">
+      <img src="image/joel.jpg" alt="Joël Jorge" class="profile-img">
       <h1>Joël Jorge</h1>
       <p>Étudiant en BUT Informatique - 19 ans</p>
       <p class="tagline">Passionné par l'informatique et déterminé à viser l'excellence</p>
